# llm-migration-research

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_migration.py
docs/: PROJECT_INDEX.md  REPORTING.md  STRATEGIES.md
docs/research/: ANALYSIS_REPORT.md  COMPARATIVE_ANALYSIS.md  MIGRATION_REPORT.md  comparative_analysis.tex  references.bib  unsupported_assertions.md
framework/: __init__.py  agents.py  runner.py
languages/: java.py  rust.py
projects/rpn2tex/: INDEX.md  IO_CONTRACT.md  I_O_CONTRACT_SUMMARY.md  MIGRATION_REVIEW_REPORT.md  PHASE_0_COMPLETION_REPORT.md  QUICK_REFERENCE.txt  README_IO_CONTRACT.md  REVIEW_FILES_MANIFEST.txt  VERIFIED_TEST_CASES.md  config.yaml  io_contract.json
projects/rpn2tex/io_contract/: EXECUTION_LOG.txt  IO_CONTRACT_INDEX.md  IO_CONTRACT_SUMMARY.md  README_IO_CONTRACT.md  io_contract.md
projects/rpn2tex/migrations/go-feature-by-feature-1/: FEATURE_1_COMPLETE.md  FEATURE_3_COMPLETE.md  FEATURE_6_COMPLETE.md  README.md  VALIDATION_SUMMARY.md  ast.go  errors.go  feature_1_test.go  feature_2_test.go  feature_3_test.go  feature_4_test.go  feature_5_test.go  feature_6_test.go  go.mod  latex.go  lexer.go  main.go  parser.go  rpn2tex  rpn2tex_test  rpn2tex_test.go  test_cases.txt  test_multiplication_io_contract.sh  test_multiplication_parentheses.sh  test_subtraction_io.go  token.go
projects/rpn2tex/migrations/go-feature-by-feature-2/: FEATURE_1_COMPLETE.md  FEATURE_2_ADDITION_SUMMARY.md  FEATURE_4_MULTIPLICATION_COMPLETE.md  MIGRATION_SPEC.md  REVIEW_FEATURE_1.md  REVIEW_FEATURE_2.md  REVIEW_FEATURE_3.md  REVIEW_FEATURE_4.md  REVIEW_FEATURE_5.md  REVIEW_FEATURE_6.md  addition_test.go  ast.go  division_test.go  errors.go  integration_test.go  latex.go  lexer.go  multiplication_test.go  number_test.go  parser.go  precedence_test.go  rpn2tex  subtraction_test.go  test_addition.sh  token.go
projects/rpn2tex/migrations/go-feature-by-feature-3/: PRECEDENCE_MIGRATION_SUMMARY.md  README.md  ast.go  errors.go  integration_test.go  latex.go  latex_test.go  lexer.go  lexer_test.go  parser.go  parser_test.go  rpn2tex  test_subtraction.go  token.go
projects/rpn2tex/migrations/go-module-by-module-1/: AST_MIGRATION_REPORT.md  CLI_MIGRATION_COMPLETE.md  ERROR_MODULE_MIGRATION_REPORT.md  LATEX_MIGRATION_REPORT.md  LEXER_MIGRATION_REPORT.md  MIGRATION_SPEC.md  PARSER_MIGRATION_COMPLETE.md  PROJECT_COMPLETE.md  README_IO_CONTRACT.md  TOKEN_MIGRATION_REPORT.md  ast.go  ast_example_test.go  ast_test.go  cli_test.go  errors.go  errors_test.go  example_error_usage.go  example_token_usage.go  integration_test.go  io_contract.md  latex.go  latex_integration_test.go  latex_test.go  lexer.go  lexer_contract_validation_test.go  lexer_example_test.go  lexer_test.go  main.go  parser.go  parser_contract_test.go  parser_test.go  rpn2tex  rpn2tex_final  rpn2tex_race  rpn2tex_test  test_errors_manual.go  test_lexer_io_contract.go  token.go  token_test.go  validate_io_contract.sh
projects/rpn2tex/migrations/go-module-by-module-2/: IO_CONTRACT.md  MIGRATION_COMPLETE.md  MIGRATION_SPEC.md  README_IO_CONTRACT.md  TEST_EXECUTION_REPORT.md  ast.go  ast_test.go  errors.go  errors_test.go  go.mod  integration_test.go  latex.go  latex_test.go  lexer.go  lexer_test.go  parser.go  parser_test.go  rpn2tex  token.go  token_test.go
projects/rpn2tex/migrations/go-module-by-module-3/: MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  README.md  ast.go  ast_test.go  errors.go  errors_test.go  integration_test.go  latex.go  latex_test.go  lexer.go  lexer_test.go  migration_spec.md  parser.go  parser_test.go  rpn2tex  (+3 more)
projects/rpn2tex/migrations/rust-module-by-module/: Cargo.toml  verify_io_contract.sh
projects/rpn2tex/migrations/rust-module-by-module/logs/: metrics_migration_20251226_164028.json  metrics_migration_20251226_173315.json  metrics_migration_20251226_232632.json  metrics_migration_20251227_064636.json  metrics_migration_20251227_080249.json
projects/rpn2tex/migrations/rust-module-by-module/src/: parser.rs  tokens.rs
projects/txt2tex/source/: katex_gen.py  latex_gen.py  lexer.py
reporting/: __main__.py  analyzer.py  cli.py  database.py  generator.py  schema.py
reporting/templates/: comparison.md.j2  run_report.md.j2  summary.md.j2  table.tex.j2
reporting/tests/: test_collector.py
scripts/: run_batch.sh
sdk_migration/: .gitignore  ANALYSIS_REPORT.md  README.md  TEST_RESULTS_SUMMARY.txt  agents.py  run_io_contract_tests.sh  run_migration.py  test_io_contract.sh
sdk_migration/docs/io-contract/: IO_CONTRACT.md  TEST_EXECUTION_REPORT.md
sdk_migration/docs/migration/: MIGRATION_COMPLETE.md  MIGRATION_SPEC.md
sdk_migration/docs/research/: ANALYSIS_REPORT.md  COMPARATIVE_ANALYSIS.md  MIGRATION_REPORT.md  comparative_analysis.tex
sdk_migration/framework/: agents.py  config.py  runner.py
sdk_migration/languages/: __init__.py  base.py
sdk_migration/projects/rpn2tex/: IO_CONTRACT_MANIFEST.txt  VERIFICATION_REPORT.txt  config.yaml  io_contract.json
sdk_migration/rpn2tex-rs/: test_file_io.sh
sdk_migration/rpn2tex-rs/src/: ast.rs  error.rs  latex.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokens.rs
src/migration/: __init__.py  __version__.py  agents.py  checkpoint.py  config.py  runner.py
src/migration/languages/: __init__.py  base.py  go.py  java.py  rust.py
src/migration/reporting/: __init__.py  analyzer.py  cli.py  collector.py  database.py  generator.py  schema.py
src/migration/strategies/: __init__.py  base.py  feature_by_feature.py  module_by_module.py
strategies/: __init__.py  base.py  feature_by_feature.py  module_by_module.py
tests/: __init__.py  test_agents.py  test_bug2_fix.py  test_checkpoint.py  test_config.py  test_languages.py  test_runner.py  test_strategies.py
tests/reporting/: test_analyzer.py  test_cli.py  test_collector.py  test_database.py  test_generator.py
(+759 files in other folders)
