[package]
name = "rpn2tex"
version = "0.1.0"
edition = "2021"
description = "Convert Reverse Polish Notation expressions to LaTeX"
license = "MIT"

[lib]
name = "rpn2tex"
path = "src/lib.rs"

[[bin]]
name = "rpn2tex"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
